[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.57"
futures = { version = "0.3.25", features = ["io-compat"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { git = "https://github.com/rvolosatovs/tokio", version = "1.24.2", default-features = false, features = ["net", "rt", "macros"] }
tokio-stream = { git = "https://github.com/rvolosatovs/tokio", version = "0.1.11", default-features = false, features = ["net", "io-util", "sync"] }
ulid = "1.0.0"
